[package]
name = "netbal"
version = "0.1.0"
authors = ["Max Campbell <max@maxc.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = "0.19"
clap = "2.33.3"
env_logger = "0.8.2"
log = "0.4.11"
indexmap = "1.6.1"
byteorder = {version = "1.3.4"}
mio-extras = "2.0.6"